outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval-821945703904583589_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but gives the destination a higher chance of selection if it is unvisited and its distance is within a factor of 2.0 of the nearest alternative, ensuring a balance between proximity and destination focus with a more lenient threshold compared to the original algorithm.}
                                                                                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but gives the destination a higher chance of selection if it is unvisited and its distance is within a factor of 2.0 of the nearest alternative, ensuring a balance between proximity and destination focus with a more lenient threshold compared to the original algorithm.}
                                                                                                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'
